# meta-hackathon-2026

./: .gitignore  DEPLOYMENT_ACTION_PLAN.md  Dockerfile  FINAL_TASKS.md  HUGGINGFACE_DEPLOYMENT_STEPS.md  MASTER_TODO.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  SPRINT_LOG.md  SUBMISSION_READY.md  SUBMISSION_URLS.txt  VIDEO_RECORDING_STEPS.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server_log.txt  server_log_8001.txt  server_log_8001_v2.txt  server_log_utf8.txt  test_imports.py  test_ws.py
docs/: 72_HOUR_SPRINT.md  BLOG_POST.md  HUGGINGFACE_DEPLOYMENT.md  MULTI_AGENT_IMPLEMENTATION.md  PITCH_SCRIPT.md  PROJECT_CONTEXT.md  START_HERE.md  SUBMISSION_CHECKLIST.md  VIDEO_RECORDING_GUIDE.md  VIDEO_SCRIPT.md  WINNING_STRATEGY.md  problem_statement.md
docs/plots/: .gitkeep  metrics.json
notebooks/: .gitkeep  llm_trl_finetuning_colab.ipynb  multi_robot_demo.ipynb  training_colab.ipynb
results/: TRAINING_SUMMARY.md
server/: app.py
tests/: test_environment.py  test_instruction_parser.py  test_integration.py  test_reward.py
warehouse_env/: .gitignore  Dockerfile  README.md  agent.py  client.py  inference.py  instruction_parser.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  self_improve.py  train.py
warehouse_env/server/: app.py  environment.py  multi_robot_environment.py
